# szteam-network-frontend/src/openapi/openapi.json
@@ -152,9 +152,6 @@
           "content": {
             "multipart/form-data": {
               "schema": {
-                "required": [
-                  "file"
-                ],
                 "type": "object",
                 "properties": {
                   "file": {
@@ -272,13 +269,23 @@
         }
       }
     },
-    "/games/shareable/{book-id}": {
+    "/games/shareable/{game-id}": {
       "patch": {
         "tags": [
           "Game"
         ],
         "operationId": "updateSharableStatus",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "game-id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -358,13 +365,23 @@
         }
       }
     },
-    "/games/archived/{book-id}": {
+    "/games/archived/{game-id}": {
       "patch": {
         "tags": [
           "Game"
         ],
         "operationId": "updateArchivedStatus",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "game-id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -437,7 +454,17 @@
           "Game"
         ],
         "operationId": "findGameById",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "game-id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
